namespace Assets.Scripts.Constants
{
    public static class PlayerJumpAnimation
    {
        public static readonly string IsInGround = "IsInGround";
        public static readonly string VerticalSpeed = "VerticalSpeed";
        public static readonly string HorizontalSpeed = "HorizontalSpeed";
    }
}
